Add: Search Input and Style

--- a/Autres/Dev_web/Weather_App/index.html
+++ b/Autres/Dev_web/Weather_App/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="test">
-        <h1>Test</h1>
+    <div class="card">
+        <div class="search">
+            <input type="text" id="search" placeholder="Enter a city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
     </div>
 </body>
 </html>
