--- a/Autres/Dev_web/Weather_App/index.html
+++ b/Autres/Dev_web/Weather_App/index.html
@@ -3,15 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" id="search" placeholder="Enter a city name" spellcheck="false">
+            <input type="text" placeholder="Enter a city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
+        <div class="weather">
+            <img src="images/clouds.png" alt="Clouds image" class="weather-icon">
+            <h1 class="temp">22°C</h1>
+            <h2 class="city">Germany</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="humidity image">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/wind.png" alt="humidity image">
+                    <div>
+                        <p class="wind">50 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+<script>
+
+const apiKey =  atob("ZDg3ZDlmMDFhMmNjMjcyM2FkNzdjZDE2YTZlYmY0ZDM=");
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+const searchBox = document.querySelector(".search input");
+const searchBtn = document.querySelector(".search button");
+
+async function checkWeather(city){
+    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+    var data = await response.json();
+
+    console.log(data);
+
+    document.querySelector(".city").innerHTML = data.name;
+    document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+    document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+    document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+    
+}
+
+searchBtn.addEventListener("click", ()=>{
+    checkWeather(searchBox.value);
+})
+
+</script>
+
 </body>
 </html>
