--- a/Autres/Dev_web/Weather_App/index.html
+++ b/Autres/Dev_web/Weather_App/index.html
@@ -42,6 +42,7 @@ const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q="
 
 const searchBox = document.querySelector(".search input");
 const searchBtn = document.querySelector(".search button");
+const weatherIcon = document.querySelector(".weather-icon");
 
 async function checkWeather(city){
     const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
@@ -53,11 +54,34 @@ async function checkWeather(city){
     document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
     document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
     document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+
+    if (data.weather[0].main == "CLouds"){
+        weatherIcon.src = "images/clouds.png";
+    }
+    else if (data.weather[0].main == "Clear"){
+        weatherIcon.src = "images/clear.png";
+    }
+    else if (data.weather[0].main == "Drizzle"){
+        weatherIcon.src = "images/drizzle.png";
+    }
+    else if (data.weather[0].main == "Mist"){
+        weatherIcon.src = "images/mist.png";
+    }
+    else if (data.weather[0].main == "Rain"){
+        weatherIcon.src = "images/rain.png";
+    }
+    else if (data.weather[0].main == "Snow"){
+        weatherIcon.src = "images/snow.png";
+    }
     
 }
 
 searchBtn.addEventListener("click", ()=>{
     checkWeather(searchBox.value);
+})
+
+searchBox.addEventListener("keypress", (e)=>{
+    if (e.key === "Enter") checkWeather(searchBox.value)
 })
 
 </script>
