--- a/Autres/Dev_web/Weather_App/index.html
+++ b/Autres/Dev_web/Weather_App/index.html
@@ -74,6 +74,7 @@ async function checkWeather(city){
         weatherIcon.src = "images/snow.png";
     }
     
+    document.querySelector(".weather").style.display = "block";
 }
 
 searchBtn.addEventListener("click", ()=>{
