--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/63c74cba34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
     <title>Music_Player</title>
 </head>
 <body>
+    <div class="container">
+        <div class="music-player">
+            <nav>
+                <div class="circle">
+                    <i class="fa-solid fa-angle-left"></i>
+                </div>
+                <div class="circle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </nav>
+            <img src="images/song_image.png" class="song-image">
+
+        </div>
+    </div>
     
 </body>
 </html>
