Add: Progress bar

--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -20,7 +20,13 @@
                 </div>
             </nav>
             <img src="images/song_image.png" class="song-image">
+            <h1>Song Name</h1>
+            <p>Artist Name</p>
 
+            <audio controls>
+                <source src="media/song1.mp3" type="audio/mp3">
+            </audio>
+            <input type="range" value="0" id="progress">
         </div>
     </div>
     
