--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -27,6 +27,13 @@
                 <source src="media/song1.mp3" type="audio/mp3">
             </audio>
             <input type="range" value="0" id="progress">
+
+            <div class="controls">
+                <div><i class="fa-solid fa-backward"></i></div>
+                <div><i class="fa-solid fa-play"></i></div>
+                <div><i class="fa-solid fa-forward"></i></div>
+            </div>
+
         </div>
     </div>
     
