Add: Quelques Effets cool

--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/63c74cba34.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <script src="index.js" defer></script>
     <title>Music_Player</title>
 </head>
@@ -19,6 +19,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </nav>
+
             <img src="images/song_image.png" class="song-image">
             <h1>Song Name</h1>
             <p>Artist Name</p>
@@ -26,8 +27,7 @@
             <audio controls>
                 <source src="media/song1.mp3" type="audio/mp3">
             </audio>
-            <input type="range" value="0" id="progress">
-
+            <input type="range" value="0" id="progress" max="100">
             <div class="controls">
                 <div><i class="fa-solid fa-backward"></i></div>
                 <div><i class="fa-solid fa-play"></i></div>
