Add: code javascript pour play ou stop la music

--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -24,13 +24,13 @@
             <h1>Song Name</h1>
             <p>Artist Name</p>
 
-            <audio controls>
+            <audio controls id="song">
                 <source src="media/song1.mp3" type="audio/mp3">
             </audio>
             <input type="range" value="0" id="progress" max="100">
             <div class="controls">
                 <div><i class="fa-solid fa-backward"></i></div>
-                <div><i class="fa-solid fa-play"></i></div>
+                <div onclick="playPause()"><i class="fa-solid fa-play" id="ctrlIcon"></i></div>
                 <div><i class="fa-solid fa-forward"></i></div>
             </div>
 
