Add : pouvoir play a partir de n'importe quelle position

--- a/Dev_web/Music_Player/index.html
+++ b/Dev_web/Music_Player/index.html
@@ -24,7 +24,7 @@
             <h1>Song Name</h1>
             <p>Artist Name</p>
 
-            <audio controls id="song">
+            <audio id="song">
                 <source src="media/song1.mp3" type="audio/mp3">
             </audio>
             <input type="range" value="0" id="progress" max="100">
