--- a/Dev_web/Pendu/index.html
+++ b/Dev_web/Pendu/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devinez le mot</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
         <h1>Devinez le mot</h1>
-        <p id="word">___Exemple</p>
+        <p id="word"></p>
         <input type="text" id="guess">
         <button id="submit">Diviner</button>
         <button id="link">Restart</button>
