`Added restart functionality and implemented game logic in Pendu game`

--- a/Dev_web/Pendu/index.html
+++ b/Dev_web/Pendu/index.html
@@ -14,7 +14,7 @@
         <p id="word"></p>
         <input type="text" id="guess">
         <button id="submit">Diviner</button>
-        <button id="link">Restart</button>
+        <button id="link" onclick="window.open('index.html')">Restart</button>
         <p id="result"></p>
 
     </main>
