`Added hangman animation and updated JavaScript to handle correct guesses`

--- a/Dev_web/Pendu/index.html
+++ b/Dev_web/Pendu/index.html
@@ -16,7 +16,16 @@
         <button id="submit">Diviner</button>
         <button id="link" onclick="window.open('index.html')">Restart</button>
         <p id="result"></p>
-
+        <!--Pour l'annimation en cas d'echec-->
+        <div id="hangman">
+            <div class="part head"></div>
+            <div class="part body"></div>
+            <div class="part left-arm"></div>
+            <div class="part right-arm"></div>
+            <div class="part left-leg"></div>
+            <div class="part right-leg"></div>
+        </div>
+        
     </main>
 </body>
 </html>
