`Refactor hangman game UI and logic`

--- a/Dev_web/Pendu/index.html
+++ b/Dev_web/Pendu/index.html
@@ -15,16 +15,11 @@
         <p id="word"></p>
         <input type="text" id="guess">
         <button id="submit">Diviner</button>
-        <button id="link" onclick="location.reload()">Restart</button>
+        <button id="link">Restart</button>
         <p id="result"></p>
         <!--Pour l'annimation en cas d'echec-->
-        <div id="hangman">
-            <div class="part head"></div>
-            <div class="part body"></div>
-            <div class="part left-arm"></div>
-            <div class="part right-arm"></div>
-            <div class="part left-leg"></div>
-            <div class="part right-leg"></div>
+        <div class="hangman">
+            <img src="images/hangman-0.svg" alt="hangman-img-0" draggable="false">
         </div>
         
     </main>
