--- a/Dev_web/Pendu/index.html
+++ b/Dev_web/Pendu/index.html
@@ -23,5 +23,10 @@
         </div>
         
     </main>
+    <div id="alreadyTested" class="alreadyTested">
+        <h3>Lettres testées :</h3>
+    </div>
+    
+
 </body>
 </html>
