--- a/Dev_web/Snake_Game/index.html
+++ b/Dev_web/Snake_Game/index.html
@@ -12,7 +12,11 @@
             if(canvas.getContext){
                 const ctx = canvas.getContext("2d");
                 // Creation d'un objet rect
-                ctx.re 
+                ctx.fillStyle = "rgb(200, 0, 0)";
+                ctx.fillRect(10, 10, 50, 50)
+
+                ctx.fillStyle = "rgba(0, 200, 0, 0.5)";
+                ctx.fillRect(20, 20, 50, 50)
             }         
         }
     </script>
