`Update index.html and snake.js to reflect changes in canvas size and snake direction initialization.`

--- a/Dev_web/Snake_Game/index.html
+++ b/Dev_web/Snake_Game/index.html
@@ -8,10 +8,14 @@
     <style>
         body{
             background-color: #000;
+            box-sizing: border-box;
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 0;
+            margin: 0;
             height: 100vh;
+            width: 100%;
         }
         canvas{
             border: 2px solid white;
@@ -19,6 +23,6 @@
     </style>
 </head>
 <body onload="main();">
-    <canvas id="myCanvas" width="800" height="700">Jeu Snake Game</canvas>
+    <canvas id="myCanvas" width="800" height="600">Jeu Snake Game</canvas>
 </body>
 </html>
