`Refactor snake movement and food consumption logic in snake.js and update index.html styles`

--- a/Dev_web/Snake_Game/index.html
+++ b/Dev_web/Snake_Game/index.html
@@ -7,7 +7,7 @@
     <script src="snake.js"></script>
     <style>
         body{
-            background-color: #000;
+            background-color: #E3F2FD;
             box-sizing: border-box;
             display: flex;
             justify-content: center;
@@ -18,7 +18,11 @@
             width: 100%;
         }
         canvas{
-            border: 2px solid white;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: #212837;
+            box-shadow:  23px 23px 50px #0d1016,
+             -23px -23px 50px #354058
         }
     </style>
 </head>
