--- a/Dev_web/Snake_Game/index.html
+++ b/Dev_web/Snake_Game/index.html
@@ -80,10 +80,10 @@
         <canvas id="myCanvas" width="600" height="500">Jeu Snake Game</canvas>
         
         <div class="controls">
-            <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
-            <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
-            <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
-            <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
+            <i id="ArrowLeft" data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
+            <i id="ArrowUp" data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
+            <i id="ArrowRight" data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
+            <i id="ArrowDown" data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
         </div>
     </div>
 </body>
